removed the freelance stuff

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,20 +4,20 @@
             <header>
 
 
-                <span data-picture data-alt="Fitz Ryland" class="header_logo">
+                <!-- <span data-picture data-alt="Fitz Ryland" class="header_logo">
                   <span data-src="../images/logo-small.png"></span>
                   <span data-src="../images/logo-medium.png" data-media="(min-width: 768px)"></span>
                   <span data-src="../images/logo-large.png" data-media="(min-width: 979px)"></span>
 
                   <noscript><img src="../images/logo-small.png" alt="{{ project.imgAlt }}"></noscript>
-                </span>
+                </span> -->
 
 
                 <!-- <img src="{{site.url_root}}/images/logo_0_1.png" width="456" height="561" alt="Fitz" class="header_logo" /> -->
-                <div class="header_text">
+                <!-- <div class="header_text">
                     <a href="/"><h1>Fitz Ryland</h1></a>
                     <h2>Freelance Web Designer</h2>
                     <a href="/"><h3>http://workwith.fitz.to/</h3></a>
                     {% include nav.html %}
-                </div>
+                </div> -->
             </header>
