--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 {% include header.html %}
-    <section id="portfolio">
+   <!-- <section id="portfolio">
         <h2 class="section-title">Portfolio</h2>
         <p class="section-desc">To give you a brief idea of what I've been up to, here are four websites that I completed recently. Each represents a passion of mine -- professional or otherwise -- and are built using the latest web standards on WordPress.</p>
         {% for project in site.categories.make %}
@@ -13,7 +13,7 @@
                 </span>
             </a>
         {% endfor %}
-    </section>
+    </section> -->
 <!--     <section id="documentation">
         <h2 class="section-title">Documentation</h2>
         <p class="section-desc">This is where I will be documenting my work in process. I do it to inform other professionals and so that other professionals can tell me why I am wrong. We all learn! I am also creating helpful material for my clients.</p>
