removed pattern from bg

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/* normalize.css v1.1.0 | MIT License | git.io/normalize */
+/*! normalize.css v1.1.0 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
@@ -663,7 +663,6 @@ textarea {
 
   @page {
     margin: 0.5cm; }
-
   p,
   h2,
   h3 {
@@ -688,9 +687,7 @@ textarea {
       word-break: break-word; } }
 
 html {
-  background-color: white;
-  background-image: -webkit-repeating-linear-gradient(45deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 15px, rgba(20, 0, 51, 0.1) 15px, rgba(20, 0, 51, 0.1) 25px, rgba(224, 204, 255, 0.5) 25px, rgba(224, 204, 255, 0.5) 30px, rgba(20, 0, 51, 0.1) 30px, rgba(20, 0, 51, 0.1) 45px, rgba(255, 255, 255, 0.5) 45px, rgba(255, 255, 255, 0.5) 100px), -webkit-repeating-linear-gradient(135deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 15px, rgba(20, 0, 51, 0.1) 15px, rgba(20, 0, 51, 0.1) 25px, rgba(255, 255, 255, 0.5) 25px, rgba(255, 255, 255, 0.5) 30px, rgba(20, 0, 51, 0.1) 30px, rgba(20, 0, 51, 0.1) 45px, rgba(255, 255, 255, 0.5) 45px, rgba(255, 255, 255, 0.5) 100px);
-  background-image: repeating-linear-gradient(45deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 15px, rgba(20, 0, 51, 0.1) 15px, rgba(20, 0, 51, 0.1) 25px, rgba(224, 204, 255, 0.5) 25px, rgba(224, 204, 255, 0.5) 30px, rgba(20, 0, 51, 0.1) 30px, rgba(20, 0, 51, 0.1) 45px, rgba(255, 255, 255, 0.5) 45px, rgba(255, 255, 255, 0.5) 100px), repeating-linear-gradient(135deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 15px, rgba(20, 0, 51, 0.1) 15px, rgba(20, 0, 51, 0.1) 25px, rgba(255, 255, 255, 0.5) 25px, rgba(255, 255, 255, 0.5) 30px, rgba(20, 0, 51, 0.1) 30px, rgba(20, 0, 51, 0.1) 45px, rgba(255, 255, 255, 0.5) 45px, rgba(255, 255, 255, 0.5) 100px); }
+  background-color: white; }
 
 body {
   color: #20005c;
@@ -1038,3 +1035,5 @@ h1.section-title {
 
 .clear {
   clear: both; }
+
+/*# sourceMappingURL=main.css.map */
