--- a/css/main.scss
+++ b/css/main.scss
@@ -166,62 +166,62 @@ $desktop-large-min-size: 1200px !default;
 }
 html {
 	background-color:white;
-	background-image:
-		-webkit-repeating-linear-gradient(45deg,
-			$c-secondary1,
-			$c-secondary1 10px,
-			$c-base1 10px,
-			$c-base1 15px,
-			$c-secondary2 15px,
-			$c-secondary2 25px,
-			$c-secondary1 25px,
-			$c-secondary1 30px,
-			$c-secondary2 30px,
-			$c-secondary2 45px,
-			$c-base1 45px,
-			$c-base1 100px),
-		-webkit-repeating-linear-gradient(135deg,
-			$c-secondary1,
-			$c-secondary1 10px,
-			$c-base1 10px,
-			$c-base1 15px,
-			$c-secondary2 15px,
-			$c-secondary2 25px,
-			$c-base1 25px,
-			$c-base1 30px,
-			$c-secondary2 30px,
-			$c-secondary2 45px,
-			$c-base1 45px,
-			$c-base1 100px)
-	;
-	background-image:
-		repeating-linear-gradient(45deg,
-			$c-secondary1,
-			$c-secondary1 10px,
-			$c-base1 10px,
-			$c-base1 15px,
-			$c-secondary2 15px,
-			$c-secondary2 25px,
-			$c-secondary1 25px,
-			$c-secondary1 30px,
-			$c-secondary2 30px,
-			$c-secondary2 45px,
-			$c-base1 45px,
-			$c-base1 100px),
-		repeating-linear-gradient(135deg,
-			$c-secondary1,
-			$c-secondary1 10px,
-			$c-base1 10px,
-			$c-base1 15px,
-			$c-secondary2 15px,
-			$c-secondary2 25px,
-			$c-base1 25px,
-			$c-base1 30px,
-			$c-secondary2 30px,
-			$c-secondary2 45px,
-			$c-base1 45px,
-			$c-base1 100px)
-	;
+	// background-image:
+	// 	-webkit-repeating-linear-gradient(45deg,
+	// 		$c-secondary1,
+	// 		$c-secondary1 10px,
+	// 		$c-base1 10px,
+	// 		$c-base1 15px,
+	// 		$c-secondary2 15px,
+	// 		$c-secondary2 25px,
+	// 		$c-secondary1 25px,
+	// 		$c-secondary1 30px,
+	// 		$c-secondary2 30px,
+	// 		$c-secondary2 45px,
+	// 		$c-base1 45px,
+	// 		$c-base1 100px),
+	// 	-webkit-repeating-linear-gradient(135deg,
+	// 		$c-secondary1,
+	// 		$c-secondary1 10px,
+	// 		$c-base1 10px,
+	// 		$c-base1 15px,
+	// 		$c-secondary2 15px,
+	// 		$c-secondary2 25px,
+	// 		$c-base1 25px,
+	// 		$c-base1 30px,
+	// 		$c-secondary2 30px,
+	// 		$c-secondary2 45px,
+	// 		$c-base1 45px,
+	// 		$c-base1 100px)
+	// ;
+	// background-image:
+	// 	repeating-linear-gradient(45deg,
+	// 		$c-secondary1,
+	// 		$c-secondary1 10px,
+	// 		$c-base1 10px,
+	// 		$c-base1 15px,
+	// 		$c-secondary2 15px,
+	// 		$c-secondary2 25px,
+	// 		$c-secondary1 25px,
+	// 		$c-secondary1 30px,
+	// 		$c-secondary2 30px,
+	// 		$c-secondary2 45px,
+	// 		$c-base1 45px,
+	// 		$c-base1 100px),
+	// 	repeating-linear-gradient(135deg,
+	// 		$c-secondary1,
+	// 		$c-secondary1 10px,
+	// 		$c-base1 10px,
+	// 		$c-base1 15px,
+	// 		$c-secondary2 15px,
+	// 		$c-secondary2 25px,
+	// 		$c-base1 25px,
+	// 		$c-base1 30px,
+	// 		$c-secondary2 30px,
+	// 		$c-secondary2 45px,
+	// 		$c-base1 45px,
+	// 		$c-base1 100px)
+	// ;
 }
 body {
 	color:$c-primary1;
