--- a/css/main.scss
+++ b/css/main.scss
@@ -364,7 +364,7 @@ footer {
 }
 .section-title, .section-desc {
 	// @include full-two-column-obj();
-	max-width: 18.5em
+	max-width: 18.5em;
 	margin-right: auto;
 	margin-left: auto;
 }
