--- a/css/main.css
+++ b/css/main.css
@@ -672,7 +672,7 @@ textarea {
   h2,
   h3 {
     page-break-after: avoid; } }
-.section-desc, .portfolio-description {
+.footer_social, .section-desc, .portfolio-description {
   text-indent: 1em; }
 
 * {
@@ -819,41 +819,10 @@ footer p {
       clear: both;
       padding-top: 0.5em; } }
 
-.footer_social {
-  margin: 1.5em 0 1em;
-  text-align: center; }
-
-.section-title, .section-desc {
+.footer_social, .section-desc {
   max-width: 18.5em;
   margin-right: auto;
   margin-left: auto; }
-
-.section-title {
-  margin-bottom: 1em;
-  padding-left: 0.5em; }
-  @media only screen and (min-width: 768px) and (max-width: 979px) {
-    .section-title {
-      float: left;
-      width: 10.2em; } }
-  @media only screen and (min-width: 768px) {
-    .section-title {
-      padding-left: 1.5em; } }
-  @media only screen and (min-width: 979px) {
-    .section-title {
-      width: 15.6em; }
-      .section-title:nth-child(2n-1) {
-        margin-right: 0; } }
-
-@media only screen and (min-width: 768px) and (max-width: 979px) {
-  .section-desc {
-    float: left;
-    margin-top: 1em;
-    width: 18.5em; }
-    .section-desc:nth-child(2n-1) {
-      margin-right: 1em; } }
-@media only screen and (min-width: 979px) {
-  .section-desc {
-    width: 28.3em; } }
 
 .project-thumb {
   display: block;
