--- a/css/main.css
+++ b/css/main.css
@@ -754,12 +754,14 @@ img {
     .wrap {
       width: 60em; } }
 
-header, section, footer {
-  margin: 2em 0;
+header {
+  margin-top: 2em; }
+
+header, footer {
   padding: 1em;
   position: relative;
   z-index: 0; }
-  header:after, section:after, footer:after {
+  header:after, footer:after {
     content: "";
     display: table;
     clear: both; }
