--- a/css/main.scss
+++ b/css/main.scss
@@ -285,9 +285,10 @@ img {
 		width: $fullWidth;
 	}
 }
-header, section, footer {
-	// background-color: $c-base2;
-	margin:2em 0;
+header {
+	margin-top: 2em;
+}
+header, footer {
 	padding:1em;
 	position:relative;
 	z-index:0;
