center the footer social text

--- a/css/main.scss
+++ b/css/main.scss
@@ -364,6 +364,7 @@ footer {
 	max-width: 18.5em;
 	margin-right: auto;
 	margin-left: auto;
+	text-align: center;
 }
 .project-thumb {
 	display: block;
