--- a/css/main.css
+++ b/css/main.css
@@ -824,7 +824,8 @@ footer p {
 .footer_social, .section-desc {
   max-width: 18.5em;
   margin-right: auto;
-  margin-left: auto; }
+  margin-left: auto;
+  text-align: center; }
 
 .project-thumb {
   display: block;
